- 
    
Bug
 - 
    Resolution: Fixed
 - 
    
P2: Important
 - 
    Qt Creator 14.0.2
 
- 
        
 - 
        8b4d9a911 (master)
 
When running the application in debug mode, the gdb debugger for MinGW 32- 64 bit fails to launch and the application crashes immediately.
- relates to
 - 
                    
QTBUG-128398 gdb 8.1 needs to be updated to gdb 11.2.0 for Qt 5.15.x
-         
 - Closed
 
 -         
 
| For Gerrit Dashboard: QTCREATORBUG-31841 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 628511,3 | Debugger: Handle too old python | master | qt-creator/qt-creator | Status: MERGED | +2 | -1 |