Debugger: Handle too old python

We print the respective information silently inside the debug log
and the user needs to figure out what is wrong.
Provide some real hint to the user.

Fixes: QTCREATORBUG-31841
Change-Id: I76012465fb700cd3c351b49b41d0106c79b084cb
Reviewed-by: David Schulz <david.schulz@qt.io>
Reviewed-by: Leena Miettinen <riitta-leena.miettinen@qt.io>